--- a/.github/workflows/cd-dfae-project-landing-page.yml
+++ b/.github/workflows/cd-dfae-project-landing-page.yml
@@ -1,5 +1,5 @@
 #CD pipeline for dfa api
-name: cd-dfae-project-api
+name: cd-dfae-project-landing-page
 
 on:
   push:
@@ -7,13 +7,13 @@ on:
       #      - develop
       - 'EMCRI-12'
     paths:
-      - "dfa/src/API/**"
-      - ".github/workflows/cd-dfae-project-api.yml"
+      - "landing-page/**"
+      - ".github/workflows/cd-dfae-project-landing-page.yml"
 
   workflow_dispatch:
 env:
-  IMAGE_NAME: dfa-portal-api
-  WORKING_DIRECTORY: ./dfa/src/API
+  IMAGE_NAME: dfa-landing-page
+  WORKING_DIRECTORY: ./landing-page/src
 
 jobs:
   build:
@@ -63,8 +63,8 @@ jobs:
           # Update the Helm values file with the new image tag and version
           DATETIME=$(date +'%Y-%m-%d %H:%M:%S')  # Get current date and time
           
-          sed -i  "s/apitag: .*/apitag: dev # Image Updated on $DATETIME/" ../deploy/dev_values.yaml
-          sed -i  "s/apitag: .*/apitag: dev # Image Updated on $DATETIME/"  dfa-portal-api/values.yaml
+          sed -i  "s/landingtag: .*/landingtag: dev # Image Updated on $DATETIME/" ../deploy/dev_values.yaml
+          sed -i  "s/landingtag: .*/landingtag: dev # Image Updated on $DATETIME/"  dfa-portal-landing-page/values.yaml
           
           # Commit and push the changes
           git config --global user.email "actions@github.com"
@@ -84,5 +84,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update Dev API image tag"
+          git commit -m "Update Dev Landing image tag"
           git push origin main  # Update the branch name as needed
